# advanced-rust-book-examples

./: .gitattributes  CODE_MANIFEST.json  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
cuda/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  run-cuda.sh
docker/: Dockerfile  ci_check.sh  run.sh  runner-Cargo.toml  test_all.sh
examples/ch01_why_rust_feels_different/: ownership_thread_handoff.rs  zero_cost_pipeline.rs
examples/ch02_the_rust_mental_model/: expression_blocks_and_heap.rs  move_and_drop_timeline.rs
examples/ch03_project_structure_and_tooling/: feature_gated_metrics.rs  module_visibility_service.rs
examples/ch04_ownership_borrowing_and_lifetimes/: lifetimes_and_owned_boundaries.rs  shared_and_mutable_borrows.rs
examples/ch05_ownership_inside_structs/: owned_buffer_views.rs  pointer_choices_inside_structs.rs
examples/ch06_ownership_inside_vectors/: index_handles_instead_of_refs.rs  vec_box_stable_addresses.rs
examples/ch07_copying_data_vs_cloning_data/: cow_and_arc_clone_costs.rs  move_copy_clone_receivers.rs
examples/ch08_undefined_behavior_and_unsafe_rust/: fill_window_with_raw_pointers.rs  maybe_uninit_header.rs
examples/ch09_smart_pointers_and_pinning/: pin_box_and_poll.rs  rc_weak_tree.rs
examples/ch10_arrays_slices_and_vectors/: slice_first_api.rs  vec_capacity_and_growth.rs
examples/ch25_tokio/: tcp_graceful_shutdown.rs  (+1 more)
ezkl-gpu/: Dockerfile  README.md  docker-compose.yml  gen_infer.py  run-ezkl.sh
onnx-gpu/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  gen_model.py  run-onnx.sh
(+198 files in other folders)
